form Validations,Activated router,Dependency injection and services

--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -2,10 +2,18 @@
 <!--step 2 use child directive and write attribute and apply property binding-->
 <app-child [dataFromParent]='employee' (childEvent)='dataFromChild=$event'></app-child>
 
-<label>@output</label>
+<!-- <label>@output</label>
 <ul>
     <li>{{dataFromChild.name}}</li>
     <li>{{dataFromChild.gender}}</li>
     <li>{{dataFromChild.marks}}</li>
     <li>{{dataFromChild.course}}</li>
-</ul>
+</ul> -->
+
+<div *ngIf="user">
+    <label>ID</label>
+    <div>{{id}}</div>
+    <div>{{user.username}}</div>
+    <div><img src={{user.url}}></div>
+
+</div>
