--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,15 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="parent">@Input & @Output</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="router">Router</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="register">Register</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
