--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="register">Register</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="Http-client">HttpClient</a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
